# vmagent-fdw

./: Cargo.toml  README.md  vmagentfdw.control
.github/workflows/: release.yml
sql/: bootstrap.sql
src/: client.rs  error.rs  fdw.rs  lib.rs  utils.rs
